[package]
name = "audio-read"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "audioencrypt"
crate-type=["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.79"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.113"
ogg = "0.9.1"
hound = "3.5.1"
wavers = "1.1.1"
